deployment.yml
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "nginx"
  namespace: "default"
  labels:
    app: "nginx"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "nginx"
  template:
    metadata:
      labels:
        app: "nginx"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - minio
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100    
      containers:
      - name: "nginx"
        image: "nginx:1.14.2"
        ports:
          - containerPort: 80
